--- a/css/log.css
+++ b/css/log.css
@@ -15,13 +15,13 @@ body {
     align-items: center;
 }
 
-/*form {
+form {
     padding: 0 40px;
     min-width: 300px;
     display: flex;
     flex-direction: column;
     align-items: left;
-}*/
+}
 
 input {
     margin-bottom: 3px;
