--- a/css/style.css
+++ b/css/style.css
@@ -87,17 +87,30 @@ img {
     border: 1px solid transparent;
     font-weight: 500;
     transition: var(--transition);
+    
 }
 
 .button {
     background: var(--color-white);
     color: var(--color-bg1);
     border-color: var(--color-white);
+    border-radius: 8px;
+}
+.button:hover {
+    transform: translateX(5px);
+    background: var(--color-primary);
 }
 
 .button-primary {
     background: var(--color-danger);
     color: var(--color-white);
+    transition: all 0.6s raise-in-out;
+    border-radius: 8px;
+}
+.button-primary:hover{
+    transform: translateY(-5px);
+    background: var(--color-primary);
+    color: black;
 }
 
 /* ============== NAVBAR =================== */
@@ -105,6 +118,9 @@ img {
     color: var(--color-bg1);
     font-size: 41px;
     font-weight: 600;
+}
+.logo span {
+    color: var(--color-bg2);
 }
 nav {
     background: transparent;
@@ -136,6 +152,7 @@ nav button {
     display: flex;
     align-items: center;
     gap: 4rem;
+    font-weight: 500;
 }
 
 .nav__menu a {
@@ -166,6 +183,7 @@ header {
 
 .header__left p {
     margin: 1rem 0 2.4rem;
+    font-weight: 400;
 }
 
 /*================= CATEGORIES =============================*/
